[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Levels.gd" type="Script" id=1]

[node name="Level Select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 100.0
margin_bottom = 14.0
text = "Level Select"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = -20.0
margin_right = 122.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 244.0
margin_bottom = 20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 20.0
text = "2"

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 68.0
margin_bottom = 20.0
text = "3"

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 20.0
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 116.0
margin_bottom = 20.0
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 140.0
margin_bottom = 20.0
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 164.0
margin_bottom = 20.0
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 168.0
margin_right = 188.0
margin_bottom = 20.0
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 212.0
margin_bottom = 20.0
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button10" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 216.0
margin_right = 244.0
margin_bottom = 20.0
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button8" to="." method="_on_Button8_pressed"]
