extends Control



#get_tree().change_scene("res://Scenes/World7.tscn")
func _on_Button_pressed():
		get_tree().change_scene("res://Scenes/World7.tscn")


func _on_Button2_pressed():
	get_tree().change_scene("res://World.tscn")


func _on_Button3_pressed():
	get_tree().change_scene("res://World2.tscn")


func _on_Button4_pressed():
	get_tree().change_scene("res://World3.tscn")


func _on_Button5_pressed():
	get_tree().change_scene("res://World4.tscn")


func _on_Button6_pressed():
	get_tree().change_scene("res://Scenes/World5.tscn")


func _on_Button7_pressed():
	get_tree().change_scene("res://Scenes/World6.tscn")


func _on_Button8_pressed():
	get_tree().change_scene("res://Scenes/World8.tscn")
